# veil

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  debug_parser.rs  language-spec.md  minimal_m1_test.veil  rust-toolchain.toml  simple_test.veil  test_pipeline.veil  test_syntax.veil
.github/workflows/: ci.yml  release.yml  test-platforms.yml
apps/vec/: Cargo.toml
apps/vec/src/: main.rs
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  lib.rs
crates/attr/: Cargo.toml
crates/attr/src/: lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: benchmark.rs  init.rs  lib.rs  main.rs  run.rs  test.rs  update.rs  upgrade.rs
crates/cli/tests/: mvl_no_cc.rs
crates/codegen-c/: Cargo.toml
crates/codegen-c/src/: lib.rs
crates/compiler/: Cargo.toml  build.rs
crates/compiler/src/: lib.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/helpers/: Cargo.toml
crates/helpers/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: ids.rs  lib.rs  lower.rs  nodes.rs  visitors.rs
crates/hir/tests/: lowering_tests.rs  snapshots.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/mono/: Cargo.toml
crates/mono/src/: lib.rs
crates/normalize/: Cargo.toml
crates/normalize/src/: lib.rs
crates/resolve/: Cargo.toml
crates/resolve/src/: errors.rs  lib.rs  module_graph.rs  resolver.rs  scope.rs  symbol_table.rs  visibility.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs  veil.pest
crates/syntax/tests/: division_diagnostics.rs  function_calls.rs  increment_operators.rs  m2_logical_ops.rs  mvl_smoke.rs  prelude_injection.rs
crates/typeck/: Cargo.toml
crates/typeck/src/: diagnostic.rs  expr.rs  lib.rs  pattern.rs  stmt.rs
lib/std/src/: core.ve  core.veil  io.veil  math.veil  prelude.veil  process.ve  process.veil  testing.ve  testing.veil
refs/: architecture-refactor.md  baselines-README.md  grammer.md  language-spec.md  migration-plan.md  roadmap.md
runtime/: README.md
runtime/c/: Makefile  veil_runtime.c  veil_runtime.h
scripts/: Cargo.toml  capture_all_baselines.sh  capture_baselines.sh  install.ps1  install.sh  validate_grammar.rs
scripts/src/: validate_grammar.rs
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs  typeck.rs
src-selfhosted/: main.veil
src/cli/: benchmark.rs  init.rs  mod.rs  run.rs  test.rs  upgrade.rs
src/codegen/: c.rs  mod.rs
src/codegen/c/: emit_expr.rs  emit_functions.rs  emit_stmt.rs  emit_structs.rs  mem_analysis.rs  mod.rs  utils.rs
src/codegen/ir_c/: mod.rs
src/compiler/: cache.rs  incremental.rs  mod.rs
src/helpers/: mod.rs
src/parser/: ffi.rs  import_export.rs  mod.rs  precedence.rs  test.rs  types.rs
src/parser/decl/: enum_.rs  function.rs  impl_.rs  mod.rs  struct_.rs
src/parser/expr/: atom.rs  call.rs  if_.rs  infix.rs  loop_.rs  match_.rs  mod.rs  pattern.rs  prefix.rs  template.rs
src/parser/stmt/: block.rs  break_continue.rs  for_.rs  if_.rs  let_.rs  loop_.rs  mod.rs  return_.rs  while_.rs
src/typeck/: diagnostic.rs  expr.rs  mod.rs  pattern.rs  stmt.rs
tests/: README.md  basics.veil  casts_and_types.veil  control_flow.veil  defer_safe.veil  division.veil  for_in_array.veil  functions_and_calls.veil  generics_monomorphization.veil  grammar_test.veil  hello_world.veil  imports_and_visibility.veil  ir_golden.rs  iterators.veil  lib.rs  literals.veil  literals_and_operators.veil  match_expression.veil  mutability_enforcement.veil  mutability_main.veil  mutability_success.veil  mutability_tests.veil  optionals_and_size_t.veil  pre_v03_features.veil  ranges.veil  ranges_and_arrays.veil  runtime_link.rs  simple_hir_test.veil  structs_and_enums.veil  template_strings.veil  test_debug.veil  test_deprecation.veil  test_enum.veil  test_hir.veil  test_m3_features.veil  test_m3_simple.veil  test_m3_verification.veil  test_pipeline.veil  test_simple.veil  test_struct_simple.veil  (+3 more)
tests/golden/ir/: add_and_call.golden.ir  bitwise_and_mod.golden.ir  const_return.golden.ir  for_loop.golden.ir  if_const_then_return.golden.ir  logical_and.golden.ir  logical_or.golden.ir  match_int.golden.ir  return_void_no_expr.golden.ir
tests/neg/: defer_outside_safe_error.veil  float_and_string_ops_errors.veil  module_path_separators.rs
tests/parser/: golden_ast.rs  module_paths.rs  mvl_str_and_idiv.veil
