[workspace]
resolver = "2"
members = [
  "crates/lexer",
  "crates/diagnostics",
  "crates/syntax",
  "crates/ast",
  "crates/hir",
  "crates/resolve",
  "crates/typeck",
  "crates/normalize",
  "crates/mono",
]
# Planned workspace crates (to be added as they are created):
#   crates/diagnostics
#   crates/syntax
#   crates/ast
#   crates/hir
#   crates/lower
#   crates/resolve
#   crates/typeck
#   crates/normalize
#   crates/mono
#   crates/ir
#   crates/codegen-c
#   crates/compiler
#   crates/runtime
#   crates/attr
#   crates/helpers
#   crates/cli
#   apps/vec

[package]
name = "ve"
version = "0.2.0-beta.4"
edition = "2024"

[lib]
name = "ve"
path = "src/lib.rs"

[[bin]]
name = "ve"
path = "src/main.rs"

[dependencies]
veil-syntax = { path = "crates/syntax" }
veil-ast = { path = "crates/ast" }
veil-hir = { path = "crates/hir" }
veil-resolve = { path = "crates/resolve" }
veil-typeck = { path = "crates/typeck" }
veil-normalize = { path = "crates/normalize" }
veil-mono = { path = "crates/mono" }
pest = "2.8.1"
pest_derive = "2.8.1"
pest_meta = "2.8.1"
logos = "0.15.0"
codespan = "0.11.1"
codespan-reporting = "0.11.0"
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
sha2 = "0.10"
tempfile = "3.20.0"
which = "8.0.0"
ureq = { version = "2.10", features = ["json"] }
shell-words = "1.1.0"

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
veil-diagnostics = { path = "crates/diagnostics" }
