[workspace]
resolver = "2"
members = [
  "crates/lexer",
  "crates/diagnostics",
  "crates/syntax",
  "crates/ast",
  "crates/hir",
  "crates/resolve",
  "crates/typeck",
  "crates/normalize",
  "crates/mono",
  "crates/ir",
  "crates/codegen-c",
  "crates/compiler",
  "crates/helpers",
  "crates/cli",
  "crates/runtime",
  "crates/attr",
  "scripts",
]
