[package]
name = "vec"
version = "0.1.0"
edition = "2024"
description = "Veil example CLI binary (apps/vec) that delegates to the extracted veil-cli"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "vec"
path = "src/main.rs"

[dependencies]
veil-cli = { path = "../../crates/cli" }
anyhow = "1.0.95"
