[package]
name = "veil-attr"
version = "0.1.0"
edition = "2024"
description = "Attributes and metadata structures used across the Veil compiler pipeline"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "veil_attr"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
# Keep the crate lightweight by default. Enable `serde` to serialize/deserialize
# attribute structs for caches or debug dumps.
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
# Optional serde support for attributes/metadata snapshots and cache artifacts
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
