[package]
name = "veil-cli"
version = "0.1.0"
edition = "2024"
description = "Veil CLI library (extracted), providing parsing of args and build/test/run orchestration"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "veil_cli"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Internal crates used by the CLI pipeline
veil-helpers = { path = "../helpers" }
veil-syntax   = { path = "../syntax" }
veil-ast      = { path = "../ast" }
veil-hir      = { path = "../hir" }
veil-resolve  = { path = "../resolve" }
veil-typeck   = { path = "../typeck" }
veil-normalize = { path = "../normalize" }
veil-mono     = { path = "../mono" }
veil-ir       = { path = "../ir" }
veil-codegen-c = { path = "../codegen-c" }
# Pass manager integration for M9 (optional usage from CLI)
veil-compiler = { path = "../compiler" }

# External dependencies mirrored from the current top-level CLI usage
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
codespan = "0.11.1"
codespan-reporting = "0.11.0"
colored = "2.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "8.0.0"
shell-words = "1.1.0"
tempfile = "3.20.0"
