[package]
name = "veil-compiler"
version = "0.1.0"
edition = "2024"
description = "Veil pass manager and incremental compilation orchestration"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "veil_compiler"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Internal crates
veil-syntax = { path = "../syntax" }
veil-ast = { path = "../ast" }
veil-hir = { path = "../hir" }
veil-resolve = { path = "../resolve" }
veil-typeck = { path = "../typeck" }
veil-normalize = { path = "../normalize" }
veil-mono = { path = "../mono" }
veil-ir = { path = "../ir" }
veil-codegen-c = { path = "../codegen-c" }
veil-diagnostics = { path = "../diagnostics" }

# External dependencies commonly used by the current compiler code
anyhow = "1.0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
codespan = "0.11.1"
codespan-reporting = "0.11.0"

# Data structures/utilities planned for the pass manager and caches
indexmap = "2.5.0"
ahash = "0.8.12"
petgraph = "0.6.5"
bincode = "1.3"
tempfile = "3.20.0"
