[package]
name = "veil-diagnostics"
version = "0.0.1"
edition = "2024"
publish = false
description = "Diagnostics crate for Veil: thin wrappers over codespan & codespan-reporting with a simple API."

[lib]
name = "veil_diagnostics"
path = "src/lib.rs"

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.0"
thiserror = "2.0.16"

[features]
default = []
