[package]
name = "veil-mono"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Monomorphization pass for the Veil compiler (post-typeck normalized HIR)"
publish = false

[lib]
name = "veil_mono"
path = "src/lib.rs"

[dependencies]
veil-ast = { path = "../ast" }
veil-hir = { path = "../hir" }
veil-normalize = { path = "../normalize" }
veil-typeck = { path = "../typeck" }
indexmap = "2.2"
ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
